feat: add history management APIs
